--- a/apollo-configservice/src/main/config/application-github.properties
+++ b/apollo-configservice/src/main/config/application-github.properties
@@ -17,3 +17,4 @@
 spring.datasource.url = ${spring_datasource_url}
 spring.datasource.username = ${spring_datasource_username}
 spring.datasource.password = ${spring_datasource_password}
+spring.cloud.zookeeper.connect-string=192.168.0.2:2181
