--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ctrip.framework.apollo</groupId>
-	<artifactId>apollo</artifactId>
+	<artifactId>apollo2.0.1-zookeeper</artifactId>
 	<version>${revision}</version>
 	<name>Apollo</name>
 	<packaging>pom</packaging>
